--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,68 +1,154 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html{
+    scroll-behavior: smooth;
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+@layer utilities {
+    .scroll-animation {
+      animation: fade-slide ease-in;
+      animation-timeline: scroll();
+      animation-range-start: cover 0% ;
+      animation-range-end: contain 50%;
+      
+    }
+  
+    @keyframes fade-slide {
+      from {
+        opacity: 0;
+        transform: translateY(100%);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
   }
-  a:hover {
-    color: #747bff;
+ 
+   
+  .navbar-burger{
+    width: 20px;
+    height: 10px;
+    background: transparent;
+    color: inherit;
+    border: none;
+    top: 50vh;
+    /* display: none;
+    visibility: hidden; */
   }
-  button {
-    background-color: #f9f9f9;
+  @media screen and (max-width:767px) {
+    .navbar-links{
+      display: flex;
+      flex-direction: column;
+      justify-content:flex-start ;
+      /* align-items: center; */
+      position: fixed;
+      left: -50vw;
+      bottom: 0;
+      
+      width: 55vw;
+      top: 0rem;
+      /* padding: 2rem; */
+      /* margin-left: 7rem; */
+      visibility: hidden;
+      transition: all .8s ease-in-out;
+      background-color: white;
+      /* overflow: hidden; */
+      box-shadow: 3px;
+      z-index: 51;
+      overflow-y: auto;
+      
+
+      
+    }
+  .show-navbar .navbar-links{
+      /* width: 50vw; */
+      left: 0;
+      visibility: visible;
+    }
+  .navbar-item{
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+    
+    /* align-items: center; */
+    /* justify-content: center; */
+    /* transform: translateY(100vh); */
   }
+  .navbar-link{
+    display: block;
+    font-size: 3vw;
+    right: 0;
+    display: flex;
+    
+    
+
+  }
+  .navbar-burger{
+    display: block;
+    position: fixed;
+    justify-content: center;
+    right: 1rem;
+    z-index: 100;
+    align-items: center;
+    justify-items: center;
+    top: 50vh;
+    /* visibility: visible; */
+  }
+  .navbar-burger:hover{
+    cursor: pointer;
+  }
+  .burger-bar,
+  .burger-bar::before,
+  .burger-bar::after{
+    display: block;
+    width: 20px;
+    height: 3px;
+    position: relative;
+    border-radius: 3px;
+    background: black;
+    transition: all .5s ease-in-out;
+  }
+  .burger-bar::before,
+  .burger-bar::after{
+    content: "";
+    position: absolute;
+    left: 0;
+  }
+  .burger-bar::before{
+    transform: translateY(-12px);
+  }
+  .burger-bar::after{
+    transform: translateY(12px);
+  }
+  .show-navbar .burger-bar{
+    width: 0;
+    background: transparent;
+  }
+  .show-navbar .burger-bar::before{
+    transform: rotate(45deg);
+  }
+  .show-navbar .burger-bar::after{
+    transform: rotate(-45deg);
+  }
+  .show-navbar .navbar-item{
+    transform: translateY(0);
+  }
+  .show-navbar .slideInDown-1{
+     transition: all 1s ease-in-out;
+  }
+  .show-navbar .slideInDown-2{
+    transition: all 1.1s ease-in-out;
+ }
+ .show-navbar .slideInDown-3{
+  transition: all 1.2s ease-in-out;
+}
+.show-navbar .slideInDown-4{
+  transition: all 1.3s ease-in-out;
+}
+.show-navbar .slideInDown-5{
+  transition: all 1.5s ease-in-out;
+}
 }
